--- a/a1_task1_wheeler_thomas.Rmd
+++ b/a1_task1_wheeler_thomas.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Exploratory report of amphibian abundance data recorded by the Sierra Lakes Inventory Project"
+title: "Exploratory report of mountain yellow-legged frog (Rana muscosa) abundance data recorded by the Sierra Lakes Inventory Project"
 author: "Author: Tom Wheeler"
 date: "Date: 1/22/2021"
 output: html_document
@@ -22,6 +22,7 @@ library(lubridate) #convert dates to R readable
 
 #Wrangle data to extract mountain yellow-legged frog (Rana muscosa) count each year across all water bodies
 sierra_amphibians <- read_excel(here("data","sierra_amphibians.xlsx")) %>% #read in amphibian excel file
+  filter(amphibian_species == "RAMU") %>% #filter by RAMU
   mutate(survey_date = ymd(survey_date)) %>% #convert survey date column to an R readable date formate
   mutate(record_year = year(survey_date)) %>% #extract only year value and put in new coluumn record_year
   filter(amphibian_life_stage != "EggMass") %>% #filter our EggMass values
@@ -35,9 +36,9 @@ graph_1 <- ggplot(data = sierra_amphibians, mapping = aes(x = record_year, y = n
     title = "Counts of mountain yellow-legged frog count each year across all water bodies by life stage",
     y = "Count of amphibian",
     x = "Year") +
-  geom_label(label="Tadpole", x=2001, y=1125, color = "black", size=3) +
-  geom_label(label="Adult", x=2000.25, y=900, color = "black", size=3) +
-  geom_label(label="SubAdult", x=2000, y=500, color = "black", size=3) +
+  geom_label(label="Tadpole", x=1998, y=375, color = "black", size=3) +
+  geom_label(label="Adult", x=1998, y=275, color = "black", size=3) +
+  geom_label(label="SubAdult", x=1998, y=175, color = "black", size=3) +
   theme_minimal()
 ```
 
@@ -45,6 +46,7 @@ graph_1 <- ggplot(data = sierra_amphibians, mapping = aes(x = record_year, y = n
 
 #Wrangle combined adult and subadult endangered mountain yellow-legged frogs (Rana muscosa) observed in the 5 lakes with the greatest total observed counts
 sierra_combined <- read_excel(here("data","sierra_amphibians.xlsx")) %>% #read in amphibian excel file
+  filter(amphibian_species == "RAMU") %>% #filter by RAMU
   filter(amphibian_life_stage == "Adult" | amphibian_life_stage == "SubAdult") %>% #filter data by only adults and subadults
   group_by(lake_id) %>% #group by lake_id to get counts for each lake_id
   summarise(n = n()) %>% #put observation of each lake_id in a new column "n"
@@ -64,15 +66,34 @@ graph_2 <- ggplot(data = sierra_combined, aes(x = lake_text, y = n)) +
   theme_minimal()
 ```
 
-## Overview
+### Overview
 
-## Data
+This report provides an exploratory overview of amphibian abundance recorded by the Sierra Lakes Inventory Project (SLIP) from 1995-2002. The original objective of SLIP was to describe impacts of non-native fish on lake communities, but SLIP data has subsequently enabled study of additional ecological issues, including regional amphibian declines and their impacts on communities, and impacts of non-native fish on terrestrial species. In addition, these data are being used to develop fish removal efforts to restore aquatic ecosystems and recover endangered amphibians.
+
+![](Amphibian_Map.png){width=70%}
+
+### Data
+
+This data describes the physical characteristics of and surveyed aquatic communities for > 8,000 lentic water bodies in the southern Sierra Nevada, including lakes, ponds, marshes, and meadows. The SLIP data is stored in a relational database that collectively describes water bodies (e.g., depth, elevation, location), surveys (conditions, effort), and communities (including approximately 170 fish, amphibian, reptile, benthic macroinvertebrate, and zooplankton taxa).  
+
+##
 
 ```{r, echo=FALSE}
 #generate compound figure
 (graph_1 / graph_2) & theme(plot.title = element_text(size=10))
 ```
 
-**Figure 1:** These figures explore amphibian abundance data recorded by the Sierra Lakes Inventory Project. mountain yellow-legged frogs (Rana muscosa)
+**Figure 1:** These figures explore amphibian abundance data recorded by the Sierra Lakes Inventory Project. The top line chart graphs the total mountain yellow-legged frog (Rana muscosa) count each year across all water bodies, by life stage excluding the ‘EggMass’ level. The column graph contains total counts of combined adult and subadult endangered mountain yellow-legged frogs (Rana muscosa) observed in the 5 lakes with the greatest total observed counts across all years of the study.
 
-## Discussion
+### Summary
+
+This exploratory data analysis revealed:
+
+- For most years, counts of mountain yellow-legged frog tadpoles were higher relative to adult and subadult populations across all water bodies
+- Lake 50183 exhibited the largest number of observed counts relative to other lakes.
+
+### Citations
+
+Knapp, R.A., C. Pavelka, E.E. Hegeman, and T.C. Smith. 2020. The Sierra Lakes Inventory Project: Non-Native fish and community composition of lakes and ponds in the Sierra Nevada, California ver 2. Environmental Data Initiative. https://doi.org/10.6073/pasta/d835832d7fd00d9e4466e44eea87fab3
+
+
