--- a/a1_task1_wheeler_thomas.Rmd
+++ b/a1_task1_wheeler_thomas.Rmd
@@ -5,7 +5,18 @@ date: "Date: 1/22/2021"
 output: html_document
 ---
 
-```{r setup, include=FALSE}
+### Overview
+
+This report provides an exploratory overview of mountain yellow-legged frog (Rana muscosa) abundance recorded by the Sierra Lakes Inventory Project (SLIP) from 1995-2002. The original objective of SLIP was to describe impacts of non-native fish on lake communities, but SLIP data has subsequently enabled study of additional ecological issues, including regional amphibian declines and their impacts on communities, and impacts of non-native fish on terrestrial species. In addition, these data are being used to develop fish removal efforts to restore aquatic ecosystems and recover endangered amphibians.
+
+![](Amphibian_Map.png){width=50%, align=center}
+
+### Data
+
+This data describes the physical characteristics of and surveyed aquatic communities for > 8,000 lentic water bodies in the southern Sierra Nevada, including lakes, ponds, marshes, and meadows. The SLIP data is stored in a relational database that collectively describes water bodies (e.g., depth, elevation, location), surveys (conditions, effort), and communities (including approximately 170 fish, amphibian, reptile, benthic macroinvertebrate, and zooplankton taxa).
+
+
+```{r, warning=FALSE, message=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 
 library(tidyverse)
@@ -18,7 +29,7 @@ library(lubridate) #convert dates to R readable
 
 ```
 
-```{r, echo=FALSE, warning=FALSE}
+```{r, warning=FALSE, message=FALSE}
 
 #Wrangle data to extract mountain yellow-legged frog (Rana muscosa) count each year across all water bodies
 sierra_amphibians <- read_excel(here("data","sierra_amphibians.xlsx")) %>% #read in amphibian excel file
@@ -42,7 +53,7 @@ graph_1 <- ggplot(data = sierra_amphibians, mapping = aes(x = record_year, y = n
   theme_minimal()
 ```
 
-```{r, echo=FALSE, warning=FALSE, message=FALSE}
+```{r, warning=FALSE, message=FALSE}
 
 #Wrangle combined adult and subadult endangered mountain yellow-legged frogs (Rana muscosa) observed in the 5 lakes with the greatest total observed counts
 sierra_combined <- read_excel(here("data","sierra_amphibians.xlsx")) %>% #read in amphibian excel file
@@ -65,16 +76,6 @@ graph_2 <- ggplot(data = sierra_combined, aes(x = lake_text, y = n)) +
   ) +
   theme_minimal()
 ```
-
-### Overview
-
-This report provides an exploratory overview of mountain yellow-legged frog (Rana muscosa) abundance recorded by the Sierra Lakes Inventory Project (SLIP) from 1995-2002. The original objective of SLIP was to describe impacts of non-native fish on lake communities, but SLIP data has subsequently enabled study of additional ecological issues, including regional amphibian declines and their impacts on communities, and impacts of non-native fish on terrestrial species. In addition, these data are being used to develop fish removal efforts to restore aquatic ecosystems and recover endangered amphibians.
-
-![](Amphibian_Map.png){width=70%}
-
-### Data
-
-This data describes the physical characteristics of and surveyed aquatic communities for > 8,000 lentic water bodies in the southern Sierra Nevada, including lakes, ponds, marshes, and meadows. The SLIP data is stored in a relational database that collectively describes water bodies (e.g., depth, elevation, location), surveys (conditions, effort), and communities (including approximately 170 fish, amphibian, reptile, benthic macroinvertebrate, and zooplankton taxa).  
 
 ### Exploratory Findings
 
